--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -14,7 +14,7 @@
     justify-content: space-between;
     align-items: center;
     height: 100px;
-    box-shadow: 1px 7px 20px 7px rgb(154 154 75 / 20%);
+    box-shadow: 1px 7px 20px 7px rgba(160, 160, 81, 0.2);
 }
 .nav-items{
     display: flex;
@@ -23,7 +23,7 @@
     /* padding-right: 100px; */
 }
 .nav-items>li{
-    padding-right: 75px;
+    padding-right: 55px;
     font-size: 25px;
     font-family: Quicksand, Verdana, Geneva, Tahoma, sans-serif;
     text-decoration: none;
