--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -8,13 +8,18 @@
     margin: 0;
     padding: 0;
 }
-
 .nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100px;
-    box-shadow: 1px 7px 20px 7px rgba(160, 160, 81, 0.2);
+    box-shadow: 10px 12px 20px 10px rgba(202, 202, 98, 0.2);
+}
+header{
+    position: sticky;
+    top: 0;
+    background-color: black;
+    z-index: 1;
 }
 .nav-items{
     display: flex;
