--- a/src/Styles/h1.css
+++ b/src/Styles/h1.css
@@ -1,24 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+SA+Beginner&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+
+/* heading */
 .introOne{
     color:blanchedalmond;
     padding-bottom: 20px;
     padding-left: 50px;
     padding-right: 100px;
     text-align: center;
+    font-family: Raleway, Verdana, Geneva, Tahoma, sans-serif;
 }
 .introOne>h1{
     font-size: 50px;
-    font-family: Open Sans;
     line-height: 4rem;
     letter-spacing: 1px;
 }
-.detail{
-    font-size: 33px;
-    word-spacing: 3px;
-    line-height: 40px;
+
+/* about hirer */
+.about{
+    display:flex;
+    justify-content: flex-start;
+    padding-left: 30px;
+    padding-top: 40px;
+    align-items: center;
 }
-.dOne{
+.dou{
+    color: antiquewhite;
+    width: 350px;
+    height: 300px;
+}
+.dou>h2{
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-family: Playfair Display, 'Courier New', Courier, monospace;
+}
+/* .dou>h2:hover{
+    color: #95af29;
+} */
+.dou>p{
+    letter-spacing: 0.5px;
+    word-spacing: 1.5px;
+    line-height: 22px;
+    text-align: center;
+    border: 3px dotted #95af29;
+    padding: 14px;
+    border-radius: 20px;
+    font-family: Open Sans, 'Courier New', Courier, monospace;
+}
+.dou>p:hover{
+    border-color:antiquewhite;
+    color: #d3f259;
+}
+.imagg{
+    width: 350px;
+    padding-left: 60px;
+    border-radius: 80px;
+    animation: floatUpDown 3s ease-in-out infinite;
+}
+/* login detail */
+.logup{
     display: flex;
-    justify-content: space-around;
-    color: aqua;
+    justify-content: flex-end;
+    padding-top: 40px;
+    align-items: center
 }
+
+
+/* select it */
