--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -73,3 +73,9 @@
     color: antiquewhite;
     transform: translateY(-5px);
 }
+
+#here{
+  background-color: #211f1f;
+  height: 28px;
+  margin-top: 30px;
+}
