--- a/src/Styles/login.css
+++ b/src/Styles/login.css
@@ -1,3 +1,13 @@
+.lmain{
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    padding-top: 100px; 
+    align-content: center; 
+    flex-direction: column; 
+    max-height: 100vh;
+    max-width: 100wv;
+}
 .in{
     padding: 15px;
     font-size: 21px;
@@ -13,15 +23,16 @@
     align-items: stretch;
     justify-content: space-around;
     width: 480px;
-
 }
 .toggle-container>h2{
     font-family: Quicksand, 'Courier New', Courier, monospace;
     color: #95af29; 
+    word-spacing: 1px;
+    letter-spacing: 1px;
 }
 
 .LoginB{
-    font-family: Quicksand, 'Courier New', Courier, monospace;;
+    font-family: Open Sans, 'Courier New', Courier, monospace;;
     background-color: black;
     padding: 12px;
     font-size: 22px;
@@ -43,14 +54,21 @@
     color: rgb(189, 194, 194);
     font-family: Quicksand, 'Courier New', Courier, monospace;
     display: flex;
-    flex-direction: column;
     width: 100vh;
     padding-top: 30px;
     flex-wrap: wrap;
-    align-items: flex-end;
+    justify-content: flex-end;
+    align-items: baseline;
+    margin-left: 30px;
 }
-.belowor>h3:hover{
-    color: rgb(247, 247, 247);
-    border-bottom: 2px dotted #95af29;
+.ll{
+    color: rgba(197, 220, 161, 0.646);
+    text-decoration: none;
+    padding-left: 10px;
+    letter-spacing: 0.5px;
+}
+.ll:hover{
+    color: rgb(255, 252, 252);
+    padding-bottom: 5px;
     cursor: pointer;
 }
