--- a/src/Styles/login.css
+++ b/src/Styles/login.css
@@ -74,6 +74,7 @@
     cursor: pointer;
 }
 .lo{
+    padding-left: 190px;
     width: 680px;
     animation: floatUpDown 4s ease-in-out infinite;
 }
