--- a/src/Styles/login.css
+++ b/src/Styles/login.css
@@ -1,4 +1,4 @@
-.lmain{
+.lmain{ 
     display: flex;
     justify-content: center; 
     align-items: center; 
@@ -22,6 +22,7 @@
     display: flex;
     align-items: stretch;
     justify-content: space-around;
+    padding-bottom: 10px;
     width: 480px;
 }
 .toggle-container>h2{
@@ -34,8 +35,8 @@
 .LoginB{
     font-family: Open Sans, 'Courier New', Courier, monospace;;
     background-color: black;
-    padding: 12px;
-    font-size: 22px;
+    padding: 8px;
+    font-size: 24px;
     border-radius: 32px;
     color: #95af29;
     border: 3px solid antiquewhite;
@@ -58,7 +59,7 @@
     height: 60px;
     padding-top: 30px;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: baseline;
     margin-left: 30px;
 }
@@ -66,6 +67,7 @@
     color: rgba(197, 220, 161, 0.646);
     text-decoration: none;
     padding-left: 5px;
+    padding-top: 5px;
     letter-spacing: 0.5px;
 }
 .ll:hover{
