--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -13,6 +13,7 @@
     justify-content: space-between;
     align-items: center;
     height: 100px;
+    width: 100%;
     box-shadow: 10px 12px 20px 10px rgba(202, 202, 98, 0.2);
 }
 header{
