--- a/src/Styles/h1.css
+++ b/src/Styles/h1.css
@@ -17,7 +17,7 @@
     line-height: 4rem;
     letter-spacing: 1px;
 }
- 
+
 /* about hirer */
 .about{
     /* background-color: black; */
@@ -30,7 +30,7 @@
 .dou{
     color: antiquewhite;
     width: 400px;
-    /* height: 400px; */
+    height: 400px;
 }
 .dou>h2{
     letter-spacing: 1px;
@@ -58,7 +58,7 @@
     width: 370px;
     padding-left: 60px;
     border-radius: 80px;
-    animation: floatUpDown 3s ease-in-out infinite;
+    /* animation: floatUpDown 3s ease-in-out infinite; */
 }
 .lOne{
     padding-left: 130px;
@@ -78,7 +78,7 @@
 .losi{
     color: antiquewhite;
     width: 400px;
-    height: 400px;
+    height: 300px;
 }
 .losi>h2{
     letter-spacing: 2px;
@@ -103,7 +103,7 @@
 }
 .imm{
     width: 280px;
-    animation: floatUpDown 3s ease-in-out infinite;
+    /* animation: floatUpDown 3s ease-in-out infinite; */
     padding-right: 60px;
 }
 .lTwo{
