--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -17,7 +17,7 @@
     box-shadow: 10px 12px 20px 10px rgba(202, 202, 98, 0.2);
 }
 header{
-    position: sticky;
+    /* position: sticky; */
     top: 0;
     /* background-color: transparent; */
     background-color: rgba(0, 0, 0, 0.9);
