--- a/src/Styles/reg.css
+++ b/src/Styles/reg.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 .st{
     padding: 70px 30px 50px 30px ;
     display: flex;
