--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;1,300&display=swap');
 @keyframes floatUpDown {
   0%, 100% {
     transform: translateY(0);
@@ -29,7 +29,7 @@
 .intro{
     color: aqua;
     font-size: x-large;
-    font-family: Open Sans;
+    font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
     padding-left: 50px;
     padding-right: 100px;
     text-align: center;
@@ -59,7 +59,7 @@
     background-color: black;
     
     font-size: 25px;
-    font-family: Open Sans, Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     border-radius: 12px;
     
     padding: 10px 10px 10px 10px;
