--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -29,7 +29,7 @@
 .intro{
     color: aqua;
     font-size: x-large;
-    font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     padding-left: 50px;
     padding-right: 100px;
     text-align: center;
