--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -27,7 +27,7 @@
     padding-bottom: 30px;
 }
 .intro{
-    color: aqua;
+    color: antiquewhite;
     font-size: x-large;
     font-family: 'Open Sans', sans-serif;
     padding-left: 50px;
@@ -76,6 +76,6 @@
 
 .hh{
   background-color: #211f1f;
-  height: 30px;
+  height: 20px;
   margin-top: 30px;
 }
